[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "declog"
description = "Logger for Python functions which automatically captures input arguments and the return value, plus marked intermediate variables, with minimal boilerplate."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Josh Read", email = "joshua-read@hotmail.co.uk" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []
version = "0.1.0"

[tool.setuptools_scm]
write_to = "src/_version.py"

[project.urls]
# Documentation = "doesn't exist yet"
Issues = "https://github.com/josh-read/declog/issues"
Source = "https://github.com/josh-read/declog"


[dirs.env]
virtual = ".venv"
