[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "declog"
description = "Minimal boilerplate logger for functions."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Josh Read", email = "joshua-read@hotmail.co.uk" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[project.urls]
Documentation = "https://josh-read.github.io/declog/"
Issues = "https://github.com/josh-read/declog/issues"
Source = "https://github.com/josh-read/declog"

[dirs.env]
virtual = ".venv"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "black",
  "flake8",
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material"
]
